# rice-lang

./: Cargo.toml  README.md  package.json
src/: cli.rs  rice.rs
